--- a/animelista_website/src/assets/css/navimenu.css
+++ b/animelista_website/src/assets/css/navimenu.css
@@ -3,9 +3,8 @@
     top: 0;
     left: 0;
     height: 64px;
+    min-height: 64px;
     width: 100%;
-    display: flex;
-    flex-direction: row;
     -webkit-box-shadow:0px 0px 45px 23px rgba(0,0,0,0.82);
     -moz-box-shadow: 0px 0px 45px 23px rgba(0,0,0,0.82);
     box-shadow: 0px 0px 45px 23px rgba(0,0,0,0.82);
@@ -13,12 +12,8 @@
 }
 
 .bt-set-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
     height: 100%;
-    width: 70%;
+    min-width: 560px;
 }
 
 .bt-nav-fnc {
@@ -27,8 +22,8 @@
 }
 
 .logo-container {
-    height: 100%;
-    width: 15%;
+    height: 64px;
+    width: 300px;
 }
 
 .logo-img {
@@ -37,17 +32,21 @@
 }
 
 .user-container {
+    width: 320px;
+    max-width: 320px;
+}
+
+.user-box {
     display: flex;
     flex-direction: row;
+    width: 256px;
+    min-width: 256px;
+    height: 48px;
     align-items: center;
 }
 
-.user-img-container {
-    height: 100%;
-}
-
 .user-img {
-    width: auto;
+    width: 48px;
     height: 48px;
     border-radius: 100%;
     margin: 0px 8px 0px 8px;
@@ -56,7 +55,10 @@
 .user-name-container {
     color: #fff;
     font-size: 16pt;
-    margin-right: 16px;
+    margin-right: 32px;
+    max-width: 200px;
+    overflow: hidden;
+    text-overflow: "...";
 }
 
 .user-bt-logout {
