--- a/client/src/assets/css/table.css
+++ b/client/src/assets/css/table.css
@@ -12,6 +12,9 @@
 
 .filtr-state-selector {
     width: 256px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .search-input {
@@ -84,6 +87,16 @@
 .txt-ep-nuber-view {
     width: 32px;
     text-align: center;
+}
+
+.tb-filter-sellect {
+    width: 260px;
+    max-width: 260px;
+    padding: 12px;
+    background-color: var(--bg-dark-color);
+    border: 0;
+    border-radius: 8px 8px 8px 8px;
+    color: #fff;
 }
 
 /*Kolory ikon*/
