--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -31,14 +31,14 @@ button.bt {
     border-radius: 24px;
     padding: 6px 16px;
     margin: 4px;
-    background-color: var(--bg-normal-color);
+    background-color: var(--bg-dark-color);
 }
 
-button.bt-logout {
+button.bt-circle {
     width: 36px;
     height: 36px;
     border-radius: 24px;
-    background-color: var(--bg-normal-color);
+    background-color: var(--bg-dark-color);
 }
 
 /*Normalny guzik*/
@@ -101,8 +101,43 @@ button.bt-accept:disabled {
 
 select.sl-default {
     color: var(--text-color);
-    background-color: var(--bg-normal-color);
+    background-color: var(--bg-dark-color);
     border: 2px solid var(--default-border-color);
-    border-radius: 16px;
+    border-radius: 32px;
+    padding: 8px 16px;
+}
+
+
+/*Inputy Textowe*/
+
+input.in {
+    background-color: var(--bg-dark-color);
+    border-radius: 32px;
+    color: var(--text-color);
     padding: 6px 16px;
+}
+
+input.in-default {
+    border: 2px solid var(--default-border-color);
+}
+
+/*Text box*/
+textarea.tx {
+    background-color: var(--bg-dark-color);
+    color: var(--text-color);
+    border-radius: 8px 8px 8px 8px;
+    padding: 8px;
+}
+
+textarea.tx:focus {
+    outline: none; 
+}
+
+textarea.tx-default {
+    border: 2px solid var(--default-border-color);
+}
+
+/*Ogólne zastosowanie*/
+.default-border {
+    border: 2px solid var(--default-border-color);
 }
