Dodano automatyczne filtrowanie listy dla wyszukiwarki

--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Lato';
+    font-family: 'Liberation Sans';
     font-size: 12pt;
     color:#fff;
     background-color: #212529;
